--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <td class="daa">
                     <span class="subject">Design and Analysis of Algorithms</span>
                     <span class="teacher">Geet Kiran Kaur</span>
-                    <span class="room">Block-B3-506</span>
+                    <span class="room">Block-B3-510</span>
                 </td>
                 <td class="os">
                     <span class="subject">Operating System</span>
@@ -120,7 +120,7 @@
                 <td class="daa">
                     <span class="subject">Design and Analysis of Algorithms</span>
                     <span class="teacher">Geet Kiran Kaur</span>
-                    <span class="room">Block-B3-506</span>
+                    <span class="room">Block-B3-510</span>
                 </td>
                 <td class="pblj">
                     <span class="subject">Project Based Learning in Java</span>
@@ -138,7 +138,7 @@
                 <td class="cc" rowspan="2">
                     <span class="subject">Competitive Coding-I</span>
                     <span class="teacher">Harshal Jain</span>
-                    <span class="room">Block-B3-406</span>
+                    <span class="room">Block-B3-406-A</span>
                 </td>
                 <td class="soft-skills" rowspan="2">
                     <span class="subject">Soft Skills-III</span>
