--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 </td>
                 <td class="empty"></td>
                 <td class="empty"></td>
-                <!-- <td class="empty"></td> -->
+                <td class="empty"></td>
             </tr>
             <tr>
                 <td><b>01:55 - 02:45 PM</b></td>
