--- a/index.html
+++ b/index.html
@@ -104,10 +104,10 @@
                 <td class="cc" rowspan="2">
                     <span class="subject">Competitive Coding-I</span>
                     <span class="teacher">Harshal Jain</span>
-                    <!-- <span class="room">Block-B3-402</span>
+                    <span class="room">Block-B3-402</span>
                 </td>
                 <td class="empty"></td>
-                <td class="empty"></td> -->
+                <td class="empty"></td>
                 <td class="empty"></td>
             </tr>
             <tr>
