--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
                     <span class="subject">Competitive Coding-I</span>
                     <span class="teacher">Harshal Jain</span>
                     <span class="room">Block-B3-402</span>
-                </td>
+                <!-- </td>
                 <td class="empty"></td>
                 <td class="empty"></td>
-                <td class="empty"></td>
+                <td class="empty"></td> -->
             </tr>
             <tr>
                 <td><b>01:55 - 02:45 PM</b></td>
